# static-config

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.sh  publish.sh  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yaml
adapter/: Cargo.toml
adapter/src/: lib.rs
factory/: Cargo.toml
factory/src/: lib.rs
lib/: .gitignore  adapter.wasm  package.wasm
src/: lib.rs
tests/: integration_test.rs
wit/: world.wit
