[package]
name = "static-config"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/componentized/static-config"
description = "Create custom wasi:config components with static values"
default-run = "static-config"
include = [
    "/lib/adapter.wasm",
    "/lib/package.wasm",
    "/src",
    "README.md",
    "NOTICE",
    "LICENSE"
]

[[bin]]
name = "static-config"
path = "src/bin/main.rs"
doc = false

[workspace]
members = [
    "adapter",
    "factory",
]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
java-properties = "2.0.0"
serde = { version = "1", features = ["derive"] }
walrus = "0.23.3"
wasm-compose = "0.229.0"
wasm-metadata = "0.229.0"
wit-component = "0.229.0"

[dev-dependencies]
wasmtime = "32"

[workspace.dependencies]
anyhow = "1"
static-config = { path = "." }
wit-bindgen = "0.39.0"
