[package]
name = "static-config"
version = "0.2.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/componentized/static-config"
description = "Create custom wasi:config components with static values"
default-run = "static-config"
include = [
    "/lib/adapter.wasm",
    "/lib/package.wasm",
    "/src",
    "README.md",
    "NOTICE",
    "LICENSE"
]

[profile.release]
panic = 'abort'

[[bin]]
name = "static-config"
path = "src/bin/main.rs"
doc = false

[workspace]
members = [
    "adapter",
    "factory",
]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
java-properties = "2.0"
serde = { version = "1.0", features = ["derive"] }
walrus = "0.26"
wasm-compose = "0.250"
wasm-metadata = "0.250"
wit-component = "0.250"

[dev-dependencies]
wasmtime = "45"

[workspace.dependencies]
anyhow = "1"
static-config = { path = "." }
wit-bindgen = "0.58"
